<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="now_playing">Now Playing</string>
    <string name="music_preferences">Music Preferences</string>
    <string name="recommendations">Recommendations</string>
    <string name="trending">Trending</string>
    <string name="tickets">Tickets</string>
    <string name="this_songs_lyrics">This Song\'s Lyrics</string>
    <string name="artist_details_touring_schedule">Artist Details/Touring Schedule</string>
    <string name="artists_twitter_feed">Artist\s Twitter Feed</string>
    <string name="artists_facebook_page">Artist\s Facebook page</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="jazz">Jazz</string>
    <string name="classical">Classical</string>
    <string name="now">Now</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="this_week">This Week</string>
    <string name="coming_month">Coming Month</string>
    <string name="next_6_months">Next 6 Months</string>
    <string name="purchase_ticket">Purchase Ticket</string>
    <string name="switch_to_now_playing">Switch to Now Playing</string>
    <string name="switch_to_preferences">Switch to Preferences</string>
</resources>
