<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryMinusFour"
    android:orientation="vertical">>

    <TextView
        style="@style/CommonTextView"
        android:text="@string/pop" />

    <TextView
        style="@style/CommonTextView"
        android:text="@string/rock" />

    <TextView
        style="@style/CommonTextView"
        android:text="@string/jazz" />

    <TextView
        style="@style/CommonTextView"
        android:text="@string/classical" />

    <Button
        android:id="@+id/now_playing_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ticket_button_height"
        android:text="@string/switch_to_now_playing"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>