<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryMinusFour"
    android:orientation="vertical">>

    <TextView
        style="@style/CommonTextView"
        android:text="@string/this_week" />

    <TextView
        style="@style/CommonTextView"
        android:text="@string/coming_month" />

    <TextView
        style="@style/CommonTextView"
        android:text="@string/next_6_months" />

    <Button
        android:id="@+id/ticket_change_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ticket_button_height"
        android:text="@string/switch_to_now_playing"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>