<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryMinusFour"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <TextView
        android:id="@+id/now_playing"
        android:text="@string/now_playing"
        android:background="@color/colorPrimaryMinusOne"
        style="@style/CommonTextView"/>

    <TextView
        android:id="@+id/preferences"
        android:text="@string/music_preferences"
        android:background="@color/colorPrimaryMinusOne"
        style="@style/CommonTextView"/>

    <TextView
        android:id="@+id/recommendations"
        android:text="@string/recommendations"
        android:background="@color/colorPrimaryMinusOne"
        style="@style/CommonTextView"/>

    <TextView
        android:id="@+id/trending"
        android:text="@string/trending"
        android:background="@color/colorPrimaryMinusOne"
        style="@style/CommonTextView"/>
    <TextView
        android:id="@+id/tickets"
        android:text="@string/tickets"
        android:background="@color/colorPrimaryMinusOne"
        style="@style/CommonTextView"/>

</LinearLayout>
